docker/app2-tax-calculator/spring/k8s/aws/micro-app/service-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  labels:
    app: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      name: service-a
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          image: embarkx/tax-service-a
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP

      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: service-a-svc
spec:
  selector:
    app: service-a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
