docker/app2-tax-calculator/spring/k8s/aws/micro-app/service-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      name: service-b
      labels:
        app: service-b
    spec:
      containers:
        - name: service-b
          image: embarkx/tax-service-b
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
              protocol: TCP
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: service-b
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
